# LinuxApplicationDevelopment2023

01_TerminalProject/: Makefile  Show.c
02_Multifile/: Makefile
03_Text/: randomize.sh
04_Debugging/: Makefile  range.c  scenario1  scenario2
05_Regexps/: Makefile  esub.c
07_Environmental/: Makefile.am  configure.ac  rhasher.c  testAll.sh
08_I18n/: configure.ac
08_I18n/po/: ru.po
08_I18n/src/: guesser.c
09_PatchDiff/: 0001-Define-Size.patch  0002-Define-Chars.patch  0003-Define-Seed.patch  Makefile  lab.c
10_Testing/src/: Makefile.am  libbuf.h
10_Testing/tests/: Makefile.am  dummy.ts  tests.ts
11_Documenting/: Doxyfile.in  Makefile.am  configure.ac
11_Documenting/po/: ru.po
11_Documenting/src/: Makefile.am  guesser.c
12_InstallPackaging/: Makefile.am  configure.ac
12_InstallPackaging/src/: Makefile.am  demo.c  libbuf.c  libbuf.h
